styled component done

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.21",
-    "morgan": "^1.10.0"
+    "nodemon": "^2.0.21"
   }
 }
